# Docker-CentOS-Build

./: Makefile  README.md  go.mod
autobuild/: README.md
autobuild/makefile/: README.md
build-libs/: Dockerfile  Makefile  zlog.Makefile
centos-build/: cmake.Makefile
cmd/: README.md
cmd/hh/: main.go
cmd/hh/internal/: depart.go  root.go
docker/: docker.md
docker-compose/: README.md
docker-compose/kafka/: README.md
docker-compose/sample/: Dockerfile  Makefile
docker-swarm/: README.md  docker-machine.md
docker/cc_toolchain/builder/: Dockerfile
docker/cc_toolchain/test/: Makefile
docker/centos-base/: Dockerfile  Makefile  py3.Makefile
docker/centos-base/builder/: Dockerfile  go113.Makefile  pipeline
docker/centos-build/: Dockerfile
docker/cpp_builder/: README.md
docker/cpp_builder/centos-build/: Makefile  README.md  build-cmake  yasm.Makefile
docker/cpp_toolchain/test/: CMakeLists.txt
docker/docker/: README.md
docker/docker-compose/kafka/: Makefile  README.md
docker/docker-compose/sample/: docker-compose.yml
docker/docker-swarm/: docker-stack.md
docker/docker/cc_toolchain/: README.md
docker/docker/go_toolchain/: README.md
docker/go_toolchain/: README.md
docker/go_toolchain/builder/: Dockerfile  Makefile  protoc.Makefile
docker/go_toolchain/test/: Makefile
docker/pilot/: README.md
docker/pilot/builder/: Dockerfile  Makefile  pipeline
docker/pilot/test/: Makefile
docker/script/: clear_none_image.sh
shorthand/: README.md  gopl.md
shorthand/git/: .gitconfig
test/: Makefile  main.c
(+25 files in other folders)
